--- a/src/main/resources/templates/infos.html
+++ b/src/main/resources/templates/infos.html
@@ -32,7 +32,9 @@
 				<li
 					th:text="|${nbRuchesAvecEssaim} #{ruchesavecessaim} (${nbRuchesAvecEssaimProd} #{production} + ${nbRuchesAvecEssaimElev} #{elevage})|">
 				</li>
-				<li th:text="|${nbHausses} #{hausses} (${nbHaussesSurRuchesAvecEssaim} #{posees} + ${nbHaussesHorsRuche} #{nonposees})|"></li>
+				<li
+					th:text="|${nbHausses} #{hausses} (${nbHaussesSurRuchesAvecEssaim} #{posees} + ${nbHaussesHorsRuche} #{nonposees})|">
+				</li>
 			</ul>
 		</div>
 	</div>
