--- a/src/main/resources/templates/recolte/recolteMielForm.html
+++ b/src/main/resources/templates/recolte/recolteMielForm.html
@@ -1,61 +1,65 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-	const pdsAvSupPdsAp = /*[[#{poidsAvantSupPoidsApres}]]*/ null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$(".avant").first().focus();
-		function validation(event) {
-			  const avant = document.querySelectorAll("input.avant");
-			  const apres = document.querySelectorAll("input.apres");
-			  let err = false;
-			  for (let i = 0; i < avant.length; i++) {
-				  if (parseFloat(avant[i].value) < parseFloat(apres[i].value)) {
-					  err = true;
-				  }
-			  }
-			  if (err) {
-				  alert(pdsAvSupPdsAp);
-				  event.preventDefault();  
-			  }
-			}
-		const form = document.getElementById("recolteMielForm");
-		form.addEventListener("submit", validation);
-		const inputs = document.querySelectorAll("input.modif");
-		for (elem of inputs) {
-			elem.addEventListener("input", function() {
-				// alert(parseFloat(this.dataset.initval) + " " + parseFloat(this.value));
-				// parseFloat renvoie NaN pour 10. sans partie décimale. Et 10 pour 10,
-				if (Math.abs(this.dataset.initval - this.value) > 1e-9) {
-					this.classList.add("changed");
-				} else {
-					this.classList.remove("changed");
-				}
-			});
-		}
-	});
-</script>
-<style>
-.changed {
-	background-color: gold;
-}
 
-.modif {
-	width: 6em;
-}
-/* Suppression de fleches de changement des poids de miel */
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
-	-webkit-appearance: none;
-	margin: 0;
-}
-/* Firefox */
-input[type="number"] {
-	-moz-appearance: textfield;
-}
-</style>
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:inline="javascript">
+		const pdsAvSupPdsAp = /*[[#{poidsAvantSupPoidsApres}]]*/ null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$('.avant').first().focus();
+			function validation(event) {
+				const avant = document.querySelectorAll('input.avant');
+				const apres = document.querySelectorAll('input.apres');
+				let err = false;
+				for (let i = 0; i < avant.length; i++) {
+					if (parseFloat(avant[i].value) < parseFloat(apres[i].value)) {
+						err = true;
+					}
+				}
+				if (err) {
+					alert(pdsAvSupPdsAp);
+					event.preventDefault();
+				}
+			}
+			const form = document.getElementById('recolteMielForm');
+			form.addEventListener('submit', validation);
+			const inputs = document.querySelectorAll('input.modif');
+			for (const elem of inputs) {
+				elem.addEventListener('input', function () {
+					// alert(parseFloat(this.dataset.initval) + ' ' + parseFloat(this.value));
+					// parseFloat renvoie NaN pour 10. sans partie décimale. Et 10 pour 10,
+					if (Math.abs(this.dataset.initval - this.value) > 1e-9) {
+						this.classList.add('changed');
+					} else {
+						this.classList.remove('changed');
+					}
+				});
+			}
+		});
+	</script>
+	<style>
+		.changed {
+			background-color: gold;
+		}
+
+		.modif {
+			width: 6em;
+		}
+
+		/* Suppression de fleches de changement des poids de miel */
+		/* Chrome, Safari, Edge, Opera */
+		input::-webkit-outer-spin-button,
+		input::-webkit-inner-spin-button {
+			-webkit-appearance: none;
+			margin: 0;
+		}
+
+		/* Firefox */
+		input[type="number"] {
+			-moz-appearance: textfield;
+		}
+	</style>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -71,11 +75,8 @@ input[type="number"] {
 			</div>
 		</div>
 	</div>
-	<form action="#"
-		th:action="@{'/recolte/haussesMiel/sauve/'+${recolte.id}}"
-		method="post" id="recolteMielForm">
-		<table class="table table-bordered table-striped table-responsive"
-			id="recolteMielTable">
+	<form action="#" th:action="@{'/recolte/haussesMiel/sauve/'+${recolte.id}}" method="post" id="recolteMielForm">
+		<table class="table table-bordered table-striped table-responsive" id="recolteMielTable">
 			<thead>
 				<tr>
 					<th hidden></th>
@@ -86,20 +87,15 @@ input[type="number"] {
 			</thead>
 			<tbody>
 				<tr th:each="rHM, itemStat : ${recolteMiel.recolteHaussesMiel}">
-					<td hidden><input type="number"
-						th:name="|recolteHaussesMiel[${itemStat.index}].recolteHausseId|"
-						th:value="${rHM.recolteHausseId}" /></td>
+					<td hidden><input type="number" th:name="|recolteHaussesMiel[${itemStat.index}].recolteHausseId|"
+							th:value="${rHM.recolteHausseId}" /></td>
 					<td th:text="${hausses[itemStat.index].nom}"></td>
-					<td><input type="number" class="modif avant"
-						th:min="${hausses[itemStat.index].poidsVide}" max="80"
-						step="0.001"
-						th:name="|recolteHaussesMiel[${itemStat.index}].poidsAvant|"
-						th:value="${rHM.poidsAvant}" th:data-initval="${rHM.poidsAvant}" /></td>
-					<td><input type="number" class="modif apres"
-						th:min="${hausses[itemStat.index].poidsVide}" max="80"
-						step="0.001"
-						th:name="|recolteHaussesMiel[${itemStat.index}].poidsApres|"
-						th:value="${rHM.poidsApres}" th:data-initval="${rHM.poidsApres}" /></td>
+					<td><input type="number" class="modif avant" th:min="${hausses[itemStat.index].poidsVide}" max="80"
+							step="0.001" th:name="|recolteHaussesMiel[${itemStat.index}].poidsAvant|"
+							th:value="${rHM.poidsAvant}" th:data-initval="${rHM.poidsAvant}" /></td>
+					<td><input type="number" class="modif apres" th:min="${hausses[itemStat.index].poidsVide}" max="80"
+							step="0.001" th:name="|recolteHaussesMiel[${itemStat.index}].poidsApres|"
+							th:value="${rHM.poidsApres}" th:data-initval="${rHM.poidsApres}" /></td>
 				</tr>
 			</tbody>
 		</table>
@@ -107,4 +103,5 @@ input[type="number"] {
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
