--- a/src/main/resources/templates/ruche/ruchesListe.html
+++ b/src/main/resources/templates/ruche/ruchesListe.html
@@ -2,75 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsruches"></script>
 	<script th:inline="javascript">
 		const Ruches = /*[[#{Ruches}]]*/null;
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/null;
 		const urlCommLot = /*[[@{/evenement/ruche/commentaireLot/}]]*/null;
 		const selectRuTrait = /*[[#{selectruchestraiter}]]*/null;
-		document.addEventListener('DOMContentLoaded', () => {
-			document.getElementById('rucher').addEventListener("change", (event) => {
-				table.columns(2).search(event.target.value).draw();
-			});
-			const idTbl = '#ruches';
-			const table = new DataTable(idTbl, {
-				select: {
-					style: 'multi+shift'
-				},
-				dom: 'Blftip',
-				scrollX: true,
-				buttons: ['csv', {
-					extend: 'pdf', exportOptions: {columns: ':visible'},
-					action: function (e, dt, node, config) {
-						config.title = Ruches + " " + (new Date()).toLocaleDateString();
-						const inputSearch = table.search();
-						if (inputSearch.length !== 0) {
-							config.title += " <" + inputSearch + ">";
-						}
-						const sru = document.getElementById("rucher");
-						const valr = sru.options[sru.selectedIndex].value;
-						if (valr !== "") {
-							config.title += " [" + valr + "]";
-						}
-						$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-					},
-					orientation: 'landscape'
-				}, {
-						extend: 'print',
-						text: buttTxtPrint
-					}, {
-						extend: 'colvis',
-						text: buttTxtCol
-					}]
-			});
-			function updateLinks(e, dt, type, indexes) {
-				if (type === 'row') {
-					let noms = "";
-					table.rows({
-						selected: true
-					}).data().pluck(0).each(
-						function (value, index) {
-							const a = document.createElement('template');
-							a.innerHTML = value;
-							noms += a.content.children[0].getAttribute("href").substring(
-								a.content.children[0].getAttribute("href").lastIndexOf("/") + 1)
-								+ ",";
-						});
-					if (noms) {
-						document.getElementById('commentaire').setAttribute('href', 
-							urlCommLot + noms.substring(0, noms.length - 1));
-					} else {
-						document.getElementById('commentaire').setAttribute('href', "#");
-					}
-				}
-			}
-			table.on('select deselect', updateLinks);
-			document.getElementById('commentaire').addEventListener("click", (event) => {
-				if (event.target.getAttribute("href") === "#") {
-					alert(selectRuTrait);
-				}
-			});
-		});
 	</script>
 </head>
 
