--- a/src/main/resources/templates/rucher/rucherHisto.html
+++ b/src/main/resources/templates/rucher/rucherHisto.html
@@ -20,7 +20,7 @@
 					'csv',
 					{
 						extend: 'pdf', exportOptions: {columns: ':visible'},
-						title: rucher + ' ' + nomrucher + ' ' + transhumances + " " + (new Date()).toLocaleDateString()
+						title: rucher + ' ' + nomrucher + ' ' + transhumances + ' ' + (new Date()).toLocaleDateString()
 					},
 					{extend: 'print', text: buttontextprint},
 					{extend: 'colvis', text: buttontextcol}
