--- a/src/main/resources/templates/recolte/recolteForm.html
+++ b/src/main/resources/templates/recolte/recolteForm.html
@@ -1,35 +1,36 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('typeMiel').focus();
-		$('#recolteForm').validate({
-			errorClass : 'erreur-form',
-			errorPlacement : function(error, element) {
-				error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					'required' : true
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('typeMiel').focus();
+			$('#recolteForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				poidsMiel : {
-					required : true
+				rules: {
+					date: {
+						required: true
+					},
+					poidsMiel: {
+						required: true
+					}
 				}
-			}
+			});
+			/*[- Pour trier les noms de types de miel -]*/
+			const selOpt = $('#typeMiel').val();
+			$('#typeMiel').html($('#typeMiel option').sort(function (a, b) {
+				return a.text === b.text ? 0 : a.text < b.text ? -1 : 1;
+			})).val(selOpt);
 		});
-		/*[- Pour trier les noms de types de miel -]*/
-		const selOpt = $("#typeMiel").val();
-		$('#typeMiel').html($('#typeMiel option').sort(function(a, b) {
-			return a.text == b.text ? 0 : a.text < b.text ? -1 : 1;
-		})).val(selOpt);
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -50,29 +51,26 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{/recolte/sauve}" th:object="${recolte}"
-		method="post" id="recolteForm">
+	<form action="#" th:action="@{/recolte/sauve}" th:object="${recolte}" method="post" id="recolteForm">
 		<input type="hidden" th:field="*{id}" />
 		<div class="form-floating mb-3">
-			<input class="form-control" type="text" th:field="*{date}"
-				th:errorclass="fieldError" placeholder="" /> <label
-				class="form-label" th:text="#{date}" for="date"></label>
+			<input class="form-control" type="text" th:field="*{date}" th:errorclass="fieldError" placeholder="" />
+			<label class="form-label" th:text="#{date}" for="date"></label>
 		</div>
 		<div class="form-floating mb-3">
 			<select class="form-control" th:field="*{typeMiel}">
-				<option
-					th:each="type : ${T(ooioo.ruches.recolte.TypeMiel).values()}"
-					th:value="${type}" th:text="#{${type}}"></option>
+				<option th:each="type : ${T(ooioo.ruches.recolte.TypeMiel).values()}" th:value="${type}"
+					th:text="#{${type}}"></option>
 			</select> <label class="form-label" th:text="#{typeMiel}" for="typeMiel"></label>
 		</div>
 		<div class="form-floating mb-3">
-			<input class="form-control" placeholder="" type="number" step="0.001"
-				min="0" th:field="*{poidsMiel}" th:errorclass="fieldError" /> <label
-				class="form-label" th:text="#{poidsMiel}" for="poidsMiel"></label>
+			<input class="form-control" placeholder="" type="number" step="0.001" min="0" th:field="*{poidsMiel}"
+				th:errorclass="fieldError" /> <label class="form-label" th:text="#{poidsMiel}" for="poidsMiel"></label>
 		</div>
 		<div th:replace="includeForm :: commentaireField"></div>
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
