--- a/src/main/resources/templates/ruche/rucheCadreForm.html
+++ b/src/main/resources/templates/ruche/rucheCadreForm.html
@@ -1,34 +1,35 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('valeur').focus();
-		$('#evenementForm').validate({
-			errorClass : 'erreur-form',
-			errorPlacement : function(error, element) {
-				error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('valeur').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				valeur : {
-					digits : true,
-					maxlength : 2
-				},
-				commentaire : {
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					valeur: {
+						digits: true,
+						maxlength: 2
+					},
+					commentaire: {
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -49,26 +50,22 @@
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/evenement/essaim/sauve'}"
-		th:object="${evenement}" method="post" id="evenementForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
-			type="hidden" th:field="*{rucher}" /> <input type="hidden"
+	<form action="#" th:action="@{'/evenement/essaim/sauve'}" th:object="${evenement}" method="post" id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{type}" /> <input type="hidden"
+			th:field="*{ruche}" /> <input type="hidden" th:field="*{rucher}" /> <input type="hidden"
 			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
 		<div th:replace="includeForm :: dateField"></div>
 		<div class="form-floating mb-3">
-			<input placeholder="" class="form-control" type="text"
-				th:field="*{valeur}" /> <label class="form-label"
+			<input placeholder="" class="form-control" type="text" th:field="*{valeur}" /> <label class="form-label"
 				th:text="#{nbCadres}+
 				(${evenement.ruche?.type?.nbCadresMax}?' ('+${evenement.ruche?.type?.nbCadresMax}+'max)':'')
-				"
-				for="valeur"></label>
+				" for="valeur"></label>
 		</div>
 		<div th:replace="includeForm :: commentaireField"></div>
-		<small id="textHelp" class="form-text text-muted"
-			th:text="#{evenruchercadreaide}"></small><br />
+		<small id="textHelp" class="form-text text-muted" th:text="#{evenruchercadreaide}"></small><br />
 		<div th:replace="includeForm :: BtnForm"></div>
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
