--- a/src/main/resources/templates/ruche/rucheRucherForm.html
+++ b/src/main/resources/templates/ruche/rucheRucherForm.html
@@ -1,42 +1,43 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-<head
-	th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker" />
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	const dateFirst = /*[[${dateFirst}]]*/null;
-	const timeFirst = /*[[${timeFirst}]]*/null;
-	const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
-	document.addEventListener('DOMContentLoaded', () => {
-		$.validator.addMethod('greaterThanEqual', function(value, element, param) {
-			return Date.parse(value) > Date.parse(param);
-		}, doitEtreSupA + ' {0}');
-		document.getElementById('rucherId').focus();
-		$('#evenementForm').validate({
-			errorClass : 'erreur-form',
-			errorPlacement : function(error, element) {
-				error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true,
-					greaterThanEqual : dateFirst + ' ' + timeFirst
-				},
-				commentaire : {
-					maxlength : 255
-				}
-			}
-		});
 
-		$('#date').datetimepicker({
-			minDate : dateFirst,
-			minTime : timeFirst
+<head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		const dateFirst = /*[[${dateFirst}]]*/null;
+		const timeFirst = /*[[${timeFirst}]]*/null;
+		const doitEtreSupA = /*[[#{doitEtreSupA}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$.validator.addMethod('greaterThanEqual', function (value, element, param) {
+				return Date.parse(value) > Date.parse(param);
+			}, doitEtreSupA + ' {0}');
+			document.getElementById('rucherId').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
+				},
+				rules: {
+					date: {
+						required: true,
+						greaterThanEqual: dateFirst + ' ' + timeFirst
+					},
+					commentaire: {
+						maxlength: 255
+					}
+				}
+			});
+
+			$('#date').datetimepicker({
+				minDate: dateFirst,
+				minTime: timeFirst
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -47,23 +48,18 @@
 			<div class="col">
 				<h1 class="item">
 					<th:block th:text="#{changerDeRucher} + ' '"></th:block>
-					<a th:href="@{'/ruche/'+${rucheId}}"
-						th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
+					<a th:href="@{'/ruche/'+${rucheId}}" th:text="#{ruche} + ' ' + ${ruche.nom}"></a>
 				</h1>
-				<p
-					th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
+				<p th:text="#{ajouteeAuRucher(${#temporals.format(dateTime,'dd/MM/yyyy HH:mm')},${ruche.rucher.nom})}">
 				</p>
 			</div>
 		</div>
 	</div>
-	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}"
-		method="post" id="evenementForm">
+	<form action="#" th:action="@{'/ruche/sauverucher/'+${rucheId}}" method="post" id="evenementForm">
 		<div th:replace="includeForm :: date"></div>
 		<div class="form-floating mb-3">
-			<select class="form-control" id="rucherId" name="rucherId"
-				th:field="${ruche.rucher}">
-				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}"
-					th:text="${rucheropt.nom}"></option>
+			<select class="form-control" id="rucherId" name="rucherId" th:field="${ruche.rucher}">
+				<option th:each="rucheropt : ${ruchers}" th:value="${rucheropt.id}" th:text="${rucheropt.nom}"></option>
 			</select> <label class="form-label" for="rucher" th:text="#{rucher}"></label>
 		</div>
 		<div th:replace="includeForm :: commentaire"></div>
@@ -71,4 +67,5 @@
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
