--- a/src/main/resources/templates/ruche/ruchesListePlusRucher.html
+++ b/src/main/resources/templates/ruche/ruchesListePlusRucher.html
@@ -2,42 +2,13 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
+	<script th:replace="include :: jsruches"></script>
 	<script th:inline="javascript">
 		const buttTxtPrint = /*[[#{buttontextprint}]]*/ null;
 		const buttTxtCol = /*[[#{buttontextcol}]]*/ null;
 		const Ruches = /*[[#{Ruches}]]*/ null;
 		const rucher = /*[[#{rucher}]]*/ null;
 		const nomrucher = /*[[${rucher.nom}]]*/ null;
-		document.addEventListener('DOMContentLoaded', () => {
-			const idTbl = '#ruches';
-			new DataTable(idTbl, {
-				dom: '<"buttonsData" Blf>t<"buttonsData" ip>',
-				scrollX: true,
-				buttons: [
-					'csv',
-					{
-						extend: 'pdf',
-						exportOptions: {columns: ':visible'},
-						action: function (e, dt, node, config) {
-							config.title = `${Ruches} ${rucher} ${nomrucher} ${(new Date()).toLocaleDateString()}`;
-							const inputSearch = this.search();
-							if (inputSearch.length !== 0) {
-								config.title += ' <' + inputSearch + '>';
-							}
-							$.fn.dataTable.ext.buttons.pdfHtml5.action.call(this, e, dt, node, config);
-						},
-						orientation: 'landscape'
-					},
-					{
-						extend: 'print',
-						text: buttTxtPrint,
-						exportOptions: {columns: ':visible'},
-						orientation: 'landscape'
-					},
-					{extend: 'colvis', text: buttTxtCol}
-				]
-			});
-		});
 	</script>
 </head>
 
