--- a/src/main/resources/templates/rucher/rucherCommentaireForm.html
+++ b/src/main/resources/templates/rucher/rucherCommentaireForm.html
@@ -1,30 +1,32 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:replace="include :: jsdatetimepicker"></script>
-<link th:replace="include :: cssdatetimepicker"/>
-<script th:replace="include ::  localejsdatetimepicker"></script>
-<script th:inline="javascript">
-	document.addEventListener('DOMContentLoaded', () => {
-		document.getElementById('commentaire').focus();
-		$('#evenementForm').validate({
-			errorClass: 'erreur-form',
-			errorPlacement: function(error, element) {
-			    error.insertBefore(element.closest('div'));
-			},
-			rules : {
-				date : {
-					required : true
+	<script th:replace="include :: jsdatetimepicker"></script>
+	<link th:replace="include :: cssdatetimepicker" />
+	<script th:replace="include ::  localejsdatetimepicker"></script>
+	<script th:inline="javascript">
+		document.addEventListener('DOMContentLoaded', () => {
+			document.getElementById('commentaire').focus();
+			$('#evenementForm').validate({
+				errorClass: 'erreur-form',
+				errorPlacement: function (error, element) {
+					error.insertBefore(element.closest('div'));
 				},
-				commentaire : {
-					required : true,
-					maxlength : 255
+				rules: {
+					date: {
+						required: true
+					},
+					commentaire: {
+						required: true,
+						maxlength: 255
+					}
 				}
-			}
+			});
 		});
-	});
-</script>
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -34,18 +36,17 @@
 		<div class="row">
 			<div class="col">
 				<h1 class="item">
-				<th:block th:text="#{commentaire} + ' '"></th:block>
-				<a th:href="@{'/rucher/' + ${evenement.rucher?.id}}"
+					<th:block th:text="#{commentaire} + ' '"></th:block>
+					<a th:href="@{'/rucher/' + ${evenement.rucher?.id}}"
 						th:text="#{rucher} + ' ' + ${evenement.rucher?.nom}"></a>
 				</h1>
-        	</div>
-        </div>
-    </div>
-    <form action="#" th:action="@{'/evenement/rucher/commentaire/sauve'}"
-		th:object="${evenement}" method="post" id="evenementForm">
-		<input type="hidden" th:field="*{id}" /> <input type="hidden"
-			th:field="*{type}" /> <input type="hidden" th:field="*{ruche}" /> <input
-			type="hidden" th:field="*{rucher}" /> <input type="hidden"
+			</div>
+		</div>
+	</div>
+	<form action="#" th:action="@{'/evenement/rucher/commentaire/sauve'}" th:object="${evenement}" method="post"
+		id="evenementForm">
+		<input type="hidden" th:field="*{id}" /> <input type="hidden" th:field="*{type}" /> <input type="hidden"
+			th:field="*{ruche}" /> <input type="hidden" th:field="*{rucher}" /> <input type="hidden"
 			th:field="*{essaim}" /> <input type="hidden" th:field="*{hausse}" />
 		<div th:replace="includeForm :: dateField"></div>
 		<div th:replace="includeForm :: commentaireField"></div>
@@ -54,4 +55,5 @@
 	</form>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
