--- a/src/main/resources/templates/rucher/rucherStatistiques.html
+++ b/src/main/resources/templates/rucher/rucherStatistiques.html
@@ -1,31 +1,35 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="include :: common_header(~{::script},~{::style},~{::link})">
-<script th:inline="javascript">
-const buttontextprint = /*[[#{buttontextprint}]]*/null;
-const buttontextcol = /*[[#{buttontextcol}]]*/null;
-const ruchersProdRecolte = /*[[#{ruchersProdRecolte}]]*/null;
-document.addEventListener('DOMContentLoaded', () => {
-	$('.bi-question-lg').popover({
-        html: true
-    });
-    $('.popover-dismiss').popover({
-        trigger: 'focus'
-    });
-    new DataTable('#statistiques', {
-    	dom: 'Blftip',
-    	scrollX: true,
-	    buttons: [
-	    	'csv',
-	    	{extend: 'pdf', exportOptions: {columns: ':visible'}, 
-	    		title: ruchersProdRecolte + " " + (new Date()).toLocaleDateString()},
-	        {extend: 'print', text: buttontextprint},
-	        {extend: 'colvis', text: buttontextcol}
-        ]
-    });
-} );
-</script>
+	<script th:inline="javascript">
+		const buttontextprint = /*[[#{buttontextprint}]]*/null;
+		const buttontextcol = /*[[#{buttontextcol}]]*/null;
+		const ruchersProdRecolte = /*[[#{ruchersProdRecolte}]]*/null;
+		document.addEventListener('DOMContentLoaded', () => {
+			$('.bi-question-lg').popover({
+				html: true
+			});
+			$('.popover-dismiss').popover({
+				trigger: 'focus'
+			});
+			new DataTable('#statistiques', {
+				dom: 'Blftip',
+				scrollX: true,
+				buttons: [
+					'csv',
+					{
+						extend: 'pdf', exportOptions: {columns: ':visible'},
+						title: ruchersProdRecolte + ' ' + (new Date()).toLocaleDateString()
+					},
+					{extend: 'print', text: buttontextprint},
+					{extend: 'colvis', text: buttontextcol}
+				]
+			});
+		});
+	</script>
 </head>
+
 <body>
 	<nav th:replace="navbar::navbar"></nav>
 	<br />
@@ -33,25 +37,24 @@ document.addEventListener('DOMContentLoaded', () => {
 	<br />
 	<div class="container-fluid">
 		<div class="row">
-		
+
 			<div class="col">
 				<h1 class="item">
 					<a th:href="@{'/rucher/liste'}" th:text="#{Ruchers}"></a>
 					<th:block th:text="#{ProductionRecolte}"></th:block>
 				</h1>
-			</div>		
-			<div class="col">
-				<a href="#" class="bi-question-lg" data-bs-toggle="popover"
-					data-bs-trigger="focus" tabindex="0" role="button"
-					th:attr="data-bs-content=#{aideStatistiqueRucher}"></a>
 			</div>
-        </div>
-		
-    </div>
+			<div class="col">
+				<a href="#" class="bi-question-lg" data-bs-toggle="popover" data-bs-trigger="focus" tabindex="0"
+					role="button" th:attr="data-bs-content=#{aideStatistiqueRucher}"></a>
+			</div>
+		</div>
+
+	</div>
 	<div class="container-fluid">
-	<table class="table table-bordered table-striped table-sm" id="statistiques">
+		<table class="table table-bordered table-striped table-sm" id="statistiques">
 			<thead>
-			    <tr>
+				<tr>
 					<th th:text="#{rucher}"></th>
 					<th th:text="#{recolte}"></th>
 					<th th:text="#{Total}"></th>
@@ -62,17 +65,17 @@ document.addEventListener('DOMContentLoaded', () => {
 			</thead>
 			<tbody>
 				<tr th:each="rucherPoids : ${ruchersPoids}">
-					<td><a th:href="@{'/rucher/'+${rucherPoids.id}}"
-						th:text="${rucherPoids.nom}"></a></td>
-				    <td th:text="${rucherPoids.nbRecoltes}"></td>
-				    <td th:text="${rucherPoids.pTotal}"></td>
-				    <td th:text="${rucherPoids.pMax}"></td>
+					<td><a th:href="@{'/rucher/'+${rucherPoids.id}}" th:text="${rucherPoids.nom}"></a></td>
+					<td th:text="${rucherPoids.nbRecoltes}"></td>
+					<td th:text="${rucherPoids.pTotal}"></td>
+					<td th:text="${rucherPoids.pMax}"></td>
 					<td th:text="${rucherPoids.pMin}"></td>
-					<td th:text="${rucherPoids.pMoyen}"></td>	
+					<td th:text="${rucherPoids.pMoyen}"></td>
 				</tr>
 			</tbody>
 		</table>
 	</div>
 	<footer th:replace="include::footer"></footer>
 </body>
+
 </html>
