--- a/src/main/resources/templates/include.html
+++ b/src/main/resources/templates/include.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/css/ruches.css}" />
 <link rel="stylesheet" type="text/css" media="all"
-	th:href="@{/js/datatables-1.13.5-1/datatables.min.css}" />
+	th:href="@{/js/datatables-1.13.6/datatables.min.css}" />
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/images/bootstrap-icons-1.10.2/bootstrap-icons.css}" />
 <script th:src="@{/js/jquery-3.7.0.min.js}"></script>
@@ -18,7 +18,7 @@
 <script th:src="@{/js/bootstrap-5.3.1/bootstrap.bundle.min.js}"></script>
 <link rel="stylesheet" type="text/css" media="all"
 	th:href="@{/js/bootstrap-5.3.1/bootstrap.min.css}" />
-<script th:src="@{/js/datatables-1.13.5-1/datatables.min.js}"></script>
+<script th:src="@{/js/datatables-1.13.6/datatables.min.js}"></script>
 <script th:inline="javascript">
 	function updateTheme() {
 		document.querySelector("html").setAttribute("data-bs-theme",
